fixed about page spacing problem

--- a/src/pages/About.module.scss
+++ b/src/pages/About.module.scss
@@ -1,120 +1,118 @@
 @import '../helpers/all.scss';
 
 .about {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    margin-top: 0rem;
-    width: 100%;
-    height: 80vh;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	gap: 2rem;
+	margin-top: 0rem;
+	width: 100%;
+	height: 80vh;
 }
 
 .image {
-    width: 13.33rem;
-    height: 13.33rem;
-    border-radius: 50%;
+	width: 13.33rem;
+	height: 13.33rem;
+	border-radius: 50%;
 }
 
 .text {
-    display: flex;
-    flex-direction: column;
-    width: 18.96rem;
+	display: flex;
+	flex-direction: column;
+	width: 18.96rem;
 
-    &_title {
-        color: $colorRed;
-        font-family: $fontExtraBold;
-    }
+	&_title {
+		color: $colorRed;
+		font-family: $fontExtraBold;
+	}
 
-    &_para {
-        margin-top: 2.5rem;
-        font-size: 21px;
-        color: $colorBlue;
-        font-family: $fontMedium;
+	&_para {
+		margin-top: 2.5rem;
+		font-size: 21px;
+		color: $colorBlue;
+		font-family: $fontMedium;
 
-        & > div:not(:last-child) {
-            margin-bottom: 0.5rem;
-        }
+		& > div:not(:last-child) {
+			margin-bottom: 0.5rem;
+		}
 
-        &_link {
-            color: $colorRed;
-            cursor: pointer;
-            text-decoration: underline;
-        }
-    }
+		&_link {
+			color: $colorRed;
+			cursor: pointer;
+			text-decoration: underline;
+		}
+	}
 }
 
-
-
 @media screen and (max-width: 1100px) {
+	.about {
+		flex-direction: column;
+		align-items: center;
+		width: 100%;
+		margin-top: 0;
+		height: auto;
+	}
 
-    .about {
-        flex-direction: column;
-        align-items: center;
-        width: 100%;
-        margin-top: 0;
-        height: auto;
-    }
+	.image {
+		border-radius: 50%;
+		margin: 0 1rem;
+	}
 
-    .image {
-        border-radius: 50%;
-        margin: 0 1rem;
-    }
+	.text {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		padding: 1rem 1.3rem 0 1.3rem;
+		height: 100%;
+		width: 100%;
+		max-width: 31.8rem;
 
-    .text {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding: 1rem 1.3rem 0 1.3rem;
-        height: 100%;
-        width: 100%;
-        max-width: 31.8rem;
+		&_title {
+			margin-top: 1rem;
+			text-align: center;
+		}
 
-        &_title {
-            margin-top: 1rem;
-            text-align: center;
-        }
+		&_para {
+			margin: 2rem auto 0 auto;
+			font-size: 20px;
+		}
+	}
 
-        &_para {
-            margin: 2rem auto 0 auto;
-            font-size: 20px;
-        }
-    }
-
-    .button {
-        width: 6.66rem;
-        height: 1.33rem;
-        margin-top: 2rem;
-        margin-bottom: 2rem;
-        font-size: 16px;
-    }
+	.button {
+		width: 6.66rem;
+		height: 1.33rem;
+		margin-top: 2rem;
+		margin-bottom: 2rem;
+		font-size: 16px;
+	}
 }
 
 @media screen and (max-width: 660px) {
-    .about {
-        margin-top: 0rem;
-        height: auto;
-    }
+	.about {
+		margin-top: 0rem;
+		height: auto;
+	}
 
-    .image {
-        width: 80%;
-        height: auto;
-    }
+	.image {
+		width: 80%;
+		height: auto;
+	}
 
-    .text {
-        width: 100%;
+	.text {
+		width: 100%;
 
-        &_title {
-            margin: 0;
-            font-size: 25px;
-        }
+		&_title {
+			margin: 0;
+			font-size: 25px;
+		}
 
-        &_para {
-            margin-top: 1rem;
-            font-size: 16px;
+		&_para {
+			margin-top: 1rem;
+			font-size: 16px;
 
-            & > div:not(:last-child) {
-                margin-bottom: 1rem;
-            }
-        }
-    }
+			& > div:not(:last-child) {
+				margin-bottom: 1rem;
+			}
+		}
+	}
 }
